[package]
name = "moq-worker"
authors = ["Luke Curley <kixelated@gmail.com>"]
edition = "2021"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

console_error_panic_hook = "0.1"
tracing = "0.1"
wasm-tracing = "0.2"
gloo-net = "0.6"

moq-karp = { version = "0.8", default-features = false }
web-codecs = "0.2"
web-transport-wasm = "0.4"
tokio = { version = "1", features = ["sync"] }

paste = "1"

js-sys = "0.3.72"
url = "2"
thiserror = "1"
hex = "0.4"

[dependencies.web-sys]
version = "0.3.72"
features = [
	"Window",
	"Document",
	"HtmlElement",
	"Node",
	"Text",

	# WebCodecs
	"VideoDecoder",
	"VideoDecoderInit",
	"VideoDecoderConfig",
	"VideoFrame",
	"VideoColorSpaceInit",
	"EncodedVideoChunk",
	"EncodedVideoChunkInit",
	"EncodedVideoChunkType",

	# Canvas stuff
	"CanvasRenderingContext2d",
	"HtmlCanvasElement",
	"HtmlImageElement",
	"OffscreenCanvas",
]
